Project

General

Profile

Actions

Bug #22791

closed

[librbd] force removing snapshots cannot remove children

Added by Jason Dillaman over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Using "rbd snap remove --force <snap-spec>" will flatten all child images. However, if the deep-flatten feature isn't enabled on the child images, it currently removes the image from the "rbd_children" object which will result in corrupt snapshots of the child images (since they weren't deeply flattened).


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #22806: luminous: [librbd] force removing snapshots cannot remove childrenResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #22806: luminous: [librbd] force removing snapshots cannot remove children added
Actions #4

Updated by Jason Dillaman over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF