librbd: force removal of a snapshot cannot ignore dependent children

Fixes: http://tracker.ceph.com/issues/22791
Signed-off-by: Jason Dillaman <dillaman@redhat.com>